testing json object

--- a/public/launchpad.html
+++ b/public/launchpad.html
@@ -20,7 +20,7 @@
         $(function() {
         
              $.ajax({ // ajax call starts
-            url: '/launchpad', 
+            url: '/check', 
             type:"GET",
             dataType: 'json', // Choosing a JSON datatype
             contentType: "application/json; charset=utf-8",
