testing dashboard information

--- a/public/launchpad.html
+++ b/public/launchpad.html
@@ -21,7 +21,7 @@
         
              $.ajax({ // ajax call starts
             url: '/check', 
-            type:"POST",
+            type:"GET",
             dataType: 'json', // Choosing a JSON datatype
             contentType: "application/json; charset=utf-8",
                  
