--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,8 @@
                          contentType: "application/json; charset=utf-8",
                         dataType: "json",
                         success: function(data) {
+                            
+                            alert(sessionStorage);
 
                                 location.href = "/launchpad.html";
 
