styling welcome user

--- a/public/launchpad.html
+++ b/public/launchpad.html
@@ -63,7 +63,7 @@
     <div id="left_side" class="container-fluid col-xs-2">
          <div  class="row">
             <p id="welcome_user"><i class="fa fa-user fa-2x"></i>Welcome</p>
-             <p style="color:black;" id="welcome_user1">Name LastName</p>
+             <p style="color:black; font-weight: bold;" id="welcome_user1"></p>
         </div>
     
     </div>
