--- a/public/launchpad.html
+++ b/public/launchpad.html
@@ -36,6 +36,8 @@
                 data.rows.forEach(function(row){
                     
                    var r = $("<a id= "+row.name+" href="+row.url+">");
+                    
+                    alert(r);
                     $("#links_info").append(r);
                     r.append($("<div class='info-box'>"));
                     r.append($("<span class='info-box-icon bg-orange'><i class='fa fa-folder-o'></i></span> "));
