adding link name

--- a/public/launchpad.html
+++ b/public/launchpad.html
@@ -40,7 +40,7 @@
                     r.append($("<div class='info-box'>"));
                     r.append($("<span class='info-box-icon bg-orange'><i class='fa fa-folder-o'></i></span> "));
                     r.append($(" <div class='info-box-content'>"));
-                    r.append($("<span class='info-box-text'>Link 1</span> "));
+                    r.append($("<span class='info-box-text'>"+row.link_name__c +"</span> "));
                     r.append($("<span class='info-box-number'>Description1: Lorem ipsum dolor sit amet</span>"));
                     r.append($("</a></div></div>"));
                     
