changing POST to GET

--- a/public/launchpad.html
+++ b/public/launchpad.html
@@ -24,7 +24,7 @@
             
                             $.ajax({
                         url: "/listinglinks",
-                        method: POST,
+                        method: GET,
                         data: JSON.stringify({
                             nameID: nameID
                         
