--- a/public/launchpad.html
+++ b/public/launchpad.html
@@ -37,7 +37,7 @@
             
              $.ajax({ // ajax call starts
             url: '/listinglinks', 
-            type:"GET",
+            type:"POST",
             dataType: 'json', // Choosing a JSON datatype
             contentType: "application/json; charset=utf-8",
            
