--- a/public/launchpad.html
+++ b/public/launchpad.html
@@ -24,6 +24,7 @@
             
                             $.ajax({
                         url: "/listinglinks",
+                        type:"POST",
                         data: JSON.stringify({
                             nameID: nameID
                         
