--- a/public/launchpad.html
+++ b/public/launchpad.html
@@ -36,7 +36,7 @@
             
              $.ajax({ // ajax call starts
             url: '/listinglinks', 
-            type:"POST",
+            type:"GET",
             dataType: 'json', // Choosing a JSON datatype
             contentType: "application/json; charset=utf-8",
            
