--- a/public/launchpad.html
+++ b/public/launchpad.html
@@ -45,7 +45,7 @@
                 
                 data.rows.forEach(function(row){
 
-                    var r = ("div class= 'col-md-3 col-sm-6 col-xs-12');
+                    var r = ("div class= 'col-md-3 col-sm-6 col-xs-12'");
                     $("#links_info").append(r);
                     r.append($("<a id= "+row.name+" href="+row.links__c+" target='_blank'>"));
                     r.append($("<div class='info-box'>"));
