--- a/public/launchpad.html
+++ b/public/launchpad.html
@@ -53,7 +53,7 @@
                     r.append($(" <div class='info-box-content'>"));
                     r.append($("<span class='info-box-text'>"+row.link_name__c +"</span> "));
                     r.append($("<span class='info-box-number'>Description1: Lorem ipsum dolor sit amet</span>"));
-                    r.append($("</a></div></div></div>"));
+                    r.append($("</div></a></div></div>"));
                     
           });
     
