--- a/public/launchpad.html
+++ b/public/launchpad.html
@@ -104,7 +104,7 @@
     </div>
 
     <div id="dashboard_t" class="container-fluid col-xs-10">
-         <div id="links_info" class="row">
+         <div class="row">
              
              
              <div id="links_info" class= "col-md-3 col-sm-6 col-xs-12">
