--- a/public/index.html
+++ b/public/index.html
@@ -110,18 +110,18 @@
   <div class="modal-dialog">
   <div class="modal-content">
       <div class="modal-header">
-          <h3 id="text_login">Login <i class="fa fa-sign-in fa-2x"></i> </h3>
+          <h3 id="text_login">Login <i class="fa fa-sign-in "></i> </h3>
       </div>
       <div class="modal-body">
           <form id="check" method="POST" action="/check" class="">
             <div class="form-group">
-              <input id="email__c" type="text" class="form-control input-lg" placeholder="Email">
+              <input id="email__c" type="text" class="form-control " placeholder="Email">
             </div>
             <div class="form-group">
-              <input id="login_pass__c" type="password" class="form-control input-lg" placeholder="Password">
+              <input id="login_pass__c" type="password" class="form-control " placeholder="Password">
             </div>
             <div class="form-group">
-              <button type="submit" id="style_btn" class="btn btn-primary btn-lg btn-block ">Sign In</button>
+              <button type="submit" id="style_btn" class="btn btn-primary  btn-block ">Sign In</button>
                 <div >
               <div id="error" class="alert alert-danger" role="alert" style="display: none;">
                         <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
@@ -132,8 +132,7 @@
             </div>
           </form>
       </div>
-      <div class="modal-footer">
-      </div>
+
   </div>
   </div>
 </div>
