--- a/public/launchpad.html
+++ b/public/launchpad.html
@@ -32,7 +32,7 @@
                 });
 */
             $("#welcome_user1").append(employee_name);
-            $("#welcome_user2").append( "Welcome" + employee_name);
+            $("#welcome_user2").append( "Welcome &nbsp; &nbsp;" + employee_name);
             
              $.ajax({ // ajax call starts
             url: '/listinglinks', 
