--- a/public/launchpad.html
+++ b/public/launchpad.html
@@ -53,7 +53,7 @@
                     r.append($("<span class='info-box-icon bg-orange'><i class='fa fa-folder-o'></i></span> "));
                     r.append($(" <div class='info-box-content'>"));
                     r.append($("<span class='info-box-text'>"+row.link_name__c +"</span> "));
-                    r.append($("</a></div></div>"));
+                    r.append($("</a></div></div><br><br>"));
     
           });
     
