--- a/public/launchpad.html
+++ b/public/launchpad.html
@@ -49,11 +49,10 @@
 
                     var r = $("<a class='link_color' id= "+row.name+" href="+row.links__c+" target='_blank'>");
                     $("#links_info").append(r);
-                    r.append($("<div class='info-box'>"));
                     r.append($("<span class='info-box-icon bg-orange'><i class='fa fa-folder-o'></i></span> "));
                     r.append($(" <div class='info-box-content'>"));
                     r.append($("<span class='info-box-text'>"+row.link_name__c +"</span> "));
-                    r.append($("</a></div></div>"));
+                    r.append($("</a></div>"));
     
           });
     
