--- a/public/launchpad.html
+++ b/public/launchpad.html
@@ -100,6 +100,8 @@
         </div>
     
     </div>
+    
+    <div class="container-fluid col-xs-2"></div>
 
     <div id="dashboard_t" class="container-fluid col-xs-10">
          <div  class="row">
