--- a/public/launchpad.html
+++ b/public/launchpad.html
@@ -51,7 +51,8 @@
                 
                 data.rows.forEach(function(row){
                     
-                   // alert(row.link_name__c);
+                alert(row.link_name__c);
+                      alert(row.name);
 
                     var r = $("<a class='link_color' id= "+row.name+" href="+row.links__c+" target='_blank'>");
                     $("#links_info").append(r);
