--- a/public/launchpad.html
+++ b/public/launchpad.html
@@ -44,7 +44,7 @@
                 
                 data.rows.forEach(function(row){
                     
-                alert(row.link_name__c);
+                //alert(row.link_name__c);
                       alert(row.name);
 
                     var r = $("<a class='link_color' id= "+row.name+" href="+row.links__c+" target='_blank'>");
