--- a/public/launchpad.html
+++ b/public/launchpad.html
@@ -25,11 +25,11 @@
             $.ajax({
                 url: "/listinglinks",
                 data: JSON.stringify({
-                             nameID: nameID
+                             employee_name: employee_name;
                         }),
 
                     });
-            
+            alert(employee_name);
             $("#welcome_user1").append(employee_name);
             $("#welcome_user2").append( "Welcome &nbsp; &nbsp;" + employee_name);
             
