--- a/public/launchpad.html
+++ b/public/launchpad.html
@@ -28,7 +28,7 @@
               $.ajax({
                 url: "/listinglinks",
                 data: JSON.stringify({
-                             nameID: nameID;
+                             nameID: nameID
                         }),
 
             });
