--- a/public/launchpad.html
+++ b/public/launchpad.html
@@ -23,6 +23,7 @@
         var nameID = localStorage.getItem("name");
         var sfid = localStorage.getItem("sfid");
 
+            alert(sfid);
             $("#welcome_user1").append(employee_name);
             $("#welcome_user2").append( "Welcome &nbsp; &nbsp;" + employee_name);
             
@@ -47,9 +48,8 @@
                 data.rows.forEach(function(row){
                     
                 //alert(row.link_name__c);
-                      alert(row.name);
 
-                    var r = $("<a class='link_color' id= "+row.name+" href="+row.links__c+" target='_blank'>");
+                    var r = $("<a class='link_color' id= "+row.sfid+" href="+row.links__c+" target='_blank'>");
                     $("#links_info").append(r);
                     r.append($("<span class='info-box-icon bg-orange'><i class='fa fa-hand-pointer-o'></i></span> "));
                     r.append($(" <div class='info-box-content'>"));
