--- a/public/launchpad.html
+++ b/public/launchpad.html
@@ -33,7 +33,7 @@
             $.ajax({
                 url: "/listinglinks",
                 data: JSON.stringify({
-                            relatedobject__c: relatedobject__c
+                            relatedobject__c: relatedobject__c,
                             
                 }),
                 contentType: "application/json; charset=utf-8",
