--- a/public/launchpad.html
+++ b/public/launchpad.html
@@ -23,9 +23,9 @@
         var employee_name = localStorage.getItem("employee_name__c");
         var nameID = localStorage.getItem("name");
         var relatedobject__c = localStorage.getItem("sfid");
-             var id = 8;
+           
             
-            alert(relatedobject);
+            alert(relatedobject__c);
 
             $("#welcome_user1").append(employee_name);
             $("#welcome_user2").append( "&nbsp; Welcome &nbsp; &nbsp;" + employee_name);
