--- a/public/launchpad.html
+++ b/public/launchpad.html
@@ -23,7 +23,7 @@
         var employee_name = localStorage.getItem("employee_name__c");
         var nameID = localStorage.getItem("name");
         var relatedobject__c = localStorage.getItem("sfid");
-           
+        var name = 'LINK-0004';   
             
             alert(relatedobject__c);
 
