debugging with name field

--- a/public/launchpad.html
+++ b/public/launchpad.html
@@ -35,6 +35,7 @@
                 url: "/listinglinks",
                 data: JSON.stringify({
                     relatedobject__c: relatedobject__c,
+                    name: name
                           
                             
                 }),
