Revert "testing query"
This reverts commit 4341e8806549e0a6f94a776f55cd9bc9472350de.

--- a/public/launchpad.html
+++ b/public/launchpad.html
@@ -35,7 +35,7 @@
                 url: "/listinglinks",
                 method: post,
                 data: JSON.stringify({
-                    relatedobject__c: relatedobject__c,
+                    relatedobject__c: relatedobject__c
                    
          
                 }),
