--- a/public/launchpad.html
+++ b/public/launchpad.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
     <title>SDI LaunchPad</title>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
@@ -25,7 +24,7 @@
         var relatedobject__c = localStorage.getItem("sfid");
        
             
-            alert(relatedobject__c);
+            //alert(relatedobject__c);
 
             $("#welcome_user1").append(employee_name);
             $("#welcome_user2").append( "&nbsp; Welcome &nbsp; &nbsp;" + employee_name);
