--- a/public/launchpad.html
+++ b/public/launchpad.html
@@ -23,7 +23,7 @@
         var nameID = localStorage.getItem("name");
         var related = localStorage.getItem("sfid");
       
-            //alert(relatedobject__c);
+            alert(related);
 
             $("#welcome_user1").append(employee_name);
             $("#welcome_user2").append( "&nbsp; Welcome &nbsp; &nbsp;" + employee_name);
