--- a/public/launchpad.html
+++ b/public/launchpad.html
@@ -31,6 +31,7 @@
             
             $.ajax({
                 url: "/listinglinks",
+                type: "post",
                 data: JSON.stringify({
                     related: related,
                    
