--- a/public/launchpad.html
+++ b/public/launchpad.html
@@ -52,10 +52,10 @@
                     r.append($("<div class='row'>"));
                     r.append($("<div class='col-xs-3'><i id='icon' class='fa fa-external-link fa-3x'></i></div>"));
                     r.append($("<div class='col-xs-9 text-right'> <div id='icon' class='huge'>"+row.link_name__c+"</div></div>"));
-                    r.append($("</div>"));
-                    r.append($("</div>"));
-                    r.append($("</div>"));
-                    r.append($("</a>"));
+                   // r.append($("</div>"));
+                    //r.append($("</div>"));
+                   // r.append($("</div>"));
+                   // r.append($("</a>"));
                     r.append($("</div>"));
 //r.append($("<span class='info-box-text'>"+row.link_name__c +"</span> "));
                     });
