--- a/public/launchpad.html
+++ b/public/launchpad.html
@@ -45,18 +45,24 @@
                     
                     var p =$("<div  class='col-lg-3 col-md-6'>");
                     var r =$("<a  id= "+row.sfid+" href="+row.links__c+" target='_blank'>");
+                    var i =$("<div class='panel panel-green'>");
+                    var n =$("<div class='panel-heading'>");
+                    var t =$("<div class='row'>");
                    // var r = $("");
                     $("#links_info").append(p);
                     $("#links_info").append(r);
-                    r.append($(""));
-                    r.append($("<div class='panel panel-green'> "));
-                    r.append($(" <div class='panel-heading'>"));
-                    r.append($("<div class='row'>"));
-                    r.append($("<div class='col-xs-3'><i id='icon' class='fa fa-external-link fa-3x'></i></div>"));
-                    r.append($("<div class='col-xs-9 text-right'> <div id='icon' class='huge'>"+row.link_name__c+"</div></div>"));
-                   // r.append($("</div>"));
-                    //r.append($("</div>"));
-                   // r.append($("</div>"));
+                    $("#links_info").append(i);
+                    $("#links_info").append(n);
+                    $("#links_info").append(t);
+                    //r.append($(""));
+                   // r.append($("<div class='panel panel-green'> "));
+                    //r.append($(" <div class='panel-heading'>"));
+                    //r.append($(""));
+                    t.append($("<div class='col-xs-3'><i id='icon' class='fa fa-external-link fa-3x'></i></div>"));
+                    t.append($("<div class='col-xs-9 text-right'> <div id='icon' class='huge'>"+row.link_name__c+"</div></div>"));
+                    t.append($("</div>"));
+                    n.append($("</div>"));
+                    i.append($("</div>"));
                     r.append($("</a>"));
                     p.append($("</div>"));
 //r.append($("<span class='info-box-text'>"+row.link_name__c +"</span> "));
