--- a/public/launchpad.html
+++ b/public/launchpad.html
@@ -58,8 +58,8 @@
                    // r.append($("<div class='panel panel-green'> "));
                     //r.append($(" <div class='panel-heading'>"));
                     //r.append($(""));
-                    t.append($("<div class='col-xs-3'><i id='icon' class='fa fa-external-link fa-3x'></i></div>"));
-                    t.append($("<div class='col-xs-9 text-right'> <div id='icon' class='huge'>"+row.link_name__c+"</div></div>"));
+                   // t.append($("<div class='col-xs-3'><i id='icon' class='fa fa-external-link fa-3x'></i></div>"));
+                //    t.append($("<div class='col-xs-9 text-right'> <div id='icon' class='huge'>"+row.link_name__c+"</div></div>"));
                     t.append($("</div>"));
                     n.append($("</div>"));
                     i.append($("</div>"));
