--- a/public/launchpad.html
+++ b/public/launchpad.html
@@ -71,7 +71,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html" ><img alt="Brand" src="img/sdi_dashboard.png" height="20px" ></a>
+                <a class="navbar-brand" href="index.html" ><img alt="Brand" src="img/sdi_dashboard.png" ></a>
             </div>
             <!-- Top Menu Items -->
             <ul class="nav navbar-right top-nav">
