--- a/public/launchpad.html
+++ b/public/launchpad.html
@@ -91,7 +91,7 @@
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
-                    <li class="active">
+                    <li id="links_c" class="active">
                         <a href="#"><i class="fa fa-fw fa-link"></i>Links</a>
                     </li>
                     
@@ -124,6 +124,9 @@
                 <div id="links_info" class="row">
                     
                 </div>
+                <br>
+                <br>
+                <br>
                 <!-- /.row -->
 
                 <!-- /.row -->
