--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,8 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <script src="javascript/events.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+   
+    <link rel="stylesheet" type="text/css" href="css/intro.css">
     
 
     <script>
