clear local storage

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,8 @@
     <script>
 
         $(function() {
+            
+            localStorage.clear();
 
             $("#check").submit(function(event) {
                 event.preventDefault();
