--- a/public/launchpad.html
+++ b/public/launchpad.html
@@ -83,7 +83,7 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" id="welcome_user1"><i class="fa fa-user fa-2x"></i>  <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li>
-                            <a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
+                            <a href="/logout"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
                         </li>
                     </ul>
                 </li>
