adding lower case for the email

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
 
                 $("#message").hide();
 
-                var email__c = $("#email__c").val();
+                var email__c = $("#email__c").val().toLowerCase();
             
                 var login_pass__c = $("#login_pass__c").val();
                
