adding the word report

--- a/public/kpf.html
+++ b/public/kpf.html
@@ -227,7 +227,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1 class="page-header">
-                           SDI<small>Kroger Personal Finance</small>
+                           SDI<small>Kroger Personal Finance Report </small>
                         </h1>
                         <ol class="breadcrumb">
                             <li id="links_c"  class="active">
