--- a/public/kpf.html
+++ b/public/kpf.html
@@ -53,8 +53,7 @@
                     </li>
                     <li class="active">
                         <a href="kpf.html"><i class="fa fa-fw fa-file-o"></i>KPF Reporting</a>
-                    </li>
-                    
+                    </li>   
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -90,7 +89,7 @@
                     </div>
                     
                     <div class="form-group">
-                        <label>State</label>
+                        <label>Province</label>
                         <select name="state_s" id="state_s" class="form-control">
                             <option value="AL">AL</option>
                             <option value="GA">GA</option>
