--- a/public/kpf.html
+++ b/public/kpf.html
@@ -96,8 +96,8 @@
                     </div>
                     
                     
-                    <div id="error" class="alert alert-warning" role="alert" style="display: none;">
-                        <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                    <div id="warning"  class="alert alert-warning" role="alert" style="display: none;">
+                        <span class="glyphicon glyphicon-alert" aria-hidden="true"></span>
                         <span class="sr-only">Error:</span>
                         <span id="errorMessage"></span>
                     </div>
