--- a/public/kpf.html
+++ b/public/kpf.html
@@ -67,14 +67,10 @@
                 <!-- Page Heading -->
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1 class="page-header">
-                           SDI<small>Kroger Personal Finance Report </small>
-                        </h1>
-                        <ol class="breadcrumb">
-                            <li id="links_c"  class="active">
-                                <i class="fa fa-file-o fa-lg"></i> KPF
-                            </li>
-                        </ol>
+                        <h2 class="page-header">
+                         <i class="fa fa-file-o "></i>  SDI<small>Kroger Personal Finance Report </small>
+                        </h2>
+
                     </div>
                 </div>
             
