changing style cleaner

--- a/public/index.html
+++ b/public/index.html
@@ -108,7 +108,7 @@
                 </a>
        
             </div>
-                <p id="intro">Welcome to SDI Dashboard</p> 
+                <p id="intro">Welcome to SDI Launchpad</p> 
         </div>
     </nav>
 
