--- a/public/launchpad.html
+++ b/public/launchpad.html
@@ -109,14 +109,9 @@
                 <!-- Page Heading -->
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1 class="page-header">
-                           SDI<small>LaunchPad </small>
-                        </h1>
-                        <ol class="breadcrumb">
-                            <li id="links_c"  class="active">
-                                <i class="fa fa-link fa-lg"></i> Links
-                            </li>
-                        </ol>
+                        <h2 class="page-header">
+                          <i class="fa fa-link"></i> SDI<small>Links </small>
+                        </h2>
                     </div>
                 </div>
                 <!-- /.row -->
